--- a/src/Resources/views/components/RoutesTable.html.twig
+++ b/src/Resources/views/components/RoutesTable.html.twig
@@ -233,6 +233,13 @@
                                                                                 {{ form_widget(reviewForm.time_improved) }}
                                                                                 {{ form_errors(reviewForm.time_improved) }}
                                                                             </div>
+                                                                            {% if reviewForm.save_access_records is defined %}
+                                                                            <div class="mb-3 form-check">
+                                                                                {{ form_widget(reviewForm.save_access_records) }}
+                                                                                {{ form_label(reviewForm.save_access_records) }}
+                                                                                {{ form_errors(reviewForm.save_access_records) }}
+                                                                            </div>
+                                                                            {% endif %}
                                                                         </div>
                                                                         <div class="modal-footer">
                                                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ 'routes_table.cancel'|trans({}, 'nowo_performance') }}</button>
@@ -499,6 +506,15 @@
                                                                             {{ form_widget(reviewForm.time_improved, {'attr': {'class': 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm'}}) }}
                                                                             {{ form_errors(reviewForm.time_improved) }}
                                                                         </div>
+                                                                        {% if reviewForm.save_access_records is defined %}
+                                                                        <div class="mb-4">
+                                                                            <div class="flex items-center">
+                                                                                {{ form_widget(reviewForm.save_access_records) }}
+                                                                                {{ form_label(reviewForm.save_access_records, null, {'label_attr': {'class': 'ml-2 text-sm text-gray-700'}}) }}
+                                                                            </div>
+                                                                            {{ form_errors(reviewForm.save_access_records) }}
+                                                                        </div>
+                                                                        {% endif %}
                                                                         <div class="flex justify-end space-x-2">
                                                                             <button type="button" onclick="document.getElementById('reviewModal{{ route.getId() }}').classList.add('hidden')" class="px-4 py-2 bg-gray-200 text-gray-800 rounded hover:bg-gray-300">{{ 'routes_table.cancel'|trans({}, 'nowo_performance') }}</button>
                                                                             {{ form_widget(reviewForm.submit, {'attr': {'class': 'px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700'}}) }}
